# FileRemover

./: .gitignore  CMakeLists.txt  README.md  TestTack.cpp  TestTack.h  setting.json
